--- a/tictactoe/src/components/Field/Field.module.scss
+++ b/tictactoe/src/components/Field/Field.module.scss
@@ -7,4 +7,11 @@
   font-size: 6rem;
   font-weight: 700;
   justify-content: center;
+  transition: 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+  &:hover {
+    background: rgb(133, 52, 150);
+    transform: scale(1.05);
+    cursor: pointer;
+    color: #000;
+  }
 }
